rename files so github doesn't detect css

--- a/page.tmpl
+++ b/page.tmpl
@@ -8,11 +8,10 @@
     <meta name="author" content="">
 
     <link href="http://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-    <!-- <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'> -->
     <style type="text/css">
       $header-includes$
     </style>
-    <link href="css/bootstrap-responsive-2.1.0.min.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 
     $if(highlighting-css)$
       <style type="text/css">
@@ -51,8 +50,5 @@ $body$
         </div>
 
     </div>
-
-    <script type="text/javascript" src="js/lib/jquery-1.8.0.min.js"></script>
-    <script type="text/javascript" src="js/lib/bootstrap-2.1.0.min.js"></script>
   </body>
 </html>
