--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,16 @@ html {
 body {
   font-size: 14px;
   font-family: HelveticaNeue, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  /* font-family: 'Lato', sans-serif; */
+  color: #111111;
+}
+
+h1 {
+  color: #000000;
 }
 
 pre code {
-  font: 15px/19px Inconsolata,"Lucida Console",Terminal,"Courier New",Courier
+  font: 15px/19px Inconsolata,Monaco,"Lucida Console",Terminal,"Courier New",Courier;
 }
-
 
 img {
   max-width: 100%;
@@ -34,7 +37,7 @@ hr {
 
 /* TOC Links */
 a { 
-  color: black;
+  color: #111111;
   text-decoration: none;
 }
 
